web/book/tests/snapshots/snapshot__syntax__tuples__1.snap
---
source: web/book/tests/snapshot.rs
expression: "from employees\nselect {first_name}\n"
---
SELECT
  first_name
FROM
  employees

